# porg

./: AUTHORS  COPYING  ChangeLog  ChangeLog.paco  Makefile.am  Makefile.in  README  aclocal.m4  config-bot.h.in  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  faq.txt  grop.desktop  index.html  porg.8.in  porg.spec  porgball.8.in  porgrc.5.in  porgrc.in
grop/: Makefile.am  Makefile.in  db.cc  db.h  filestreeview.cc  filestreeview.h  find.cc  find.h  infotextview.cc  infotextview.h  lock.cc  lock.h  main.cc  maintreeview.cc  maintreeview.h  mainwindow.cc  mainwindow.h  opt.cc  opt.h  pkg.h  porgball.cc  porgball.h  preferences.cc  preferences.h  properties.cc  properties.h  removepkg.cc  removepkg.h  util.cc  util.h
lib/: Makefile.am  Makefile.in
lib/porg/: Makefile.am  Makefile.in  baseopt.cc  baseopt.h  basepkg.cc  basepkg.h  common.cc  common.h  file.cc  file.h  rexp.cc  rexp.h
lib/porg-log/: Makefile.am  Makefile.in  log.c
porg/: Makefile.am  Makefile.in  db.cc  db.h  logger.cc  logger.h  main.cc  main.h  newpkg.cc  newpkg.h  opt.cc  opt.h  out.cc  out.h  pkg.cc  pkg.h  util.cc  util.h
scripts/: Makefile.am  Makefile.in  paco2porg.in  porg_bash_completion  porgball.in
